[project]
name = "spoon-scripts"
version = "0.1.0"
description = "Shared scripts for Hammerspoon Spoon repositories"
requires-python = ">=3.11"

[project.scripts]
spoon-generate-docs = "generate_docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["generate_docs.py"]

[tool.ruff]
target-version = "py311"
